# reverse-ip

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  reverse-ip.py  reverse_ip.py
.github/workflows/: deploy-to-eks.yml  image-builder.yml
charts/reverse-ip/: Chart.yaml  values.yaml
charts/reverse-ip/templates/: deployment.yaml
infra/: .terraform.lock.hcl  backend.tf  main.tf  variables.tf
