[tool.poetry]
name = "reverse-ip"
version = "0.1.0"
description = "Web application that prints the origin public IP of any request it receives in reverse."
authors = ["coyote-tango <juanpablo.rivas@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "reverse_ip"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
